chore: api documentation done
